Fix getLink documentation

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,9 @@ CHANGES
 - Fix https://bugs.launchpad.net/bugs/149517 by adding zope.interface and
   zope.schema as real dependencies
 
+- Fix browser.getLink documentation that was not updated since last API
+  modification.
+
 
 3.4.2 (2007-10-31)
 ------------------
