Define the ``index`` argument of IBrowser.getLink.  Revert rev 83809 that removed the doctest for its implementation.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,7 +12,7 @@ CHANGES
 - Fix https://bugs.launchpad.net/bugs/149517 by adding zope.interface and
   zope.schema as real dependencies
 
-- Fix browser.getLink documentation that was not updated since last API
+- Fix browser.getLink documentation that was not updated since the last API
   modification.
 
 
