--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,13 @@
 CHANGES
 =======
 
+3.5 (unreleased)
+----------------
+
+- Added a zope.testbrowser.testing.Browser.post method that allows
+  tests to supply a body and a content type.  This is handy for
+  testing ajax with non-form input (e.g. json).
+
 3.4.3 (unreleased)
 ------------------
 
