--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,9 @@ CHANGES
 - Fix test failures due to Content-Disposition header capitalization
   differences.
 
+- Pin dependency versions to Zope 3.4 KGS, because the 3.4 series of
+  zope.testbrowser doesn't work with newer versions of, e.g. zope.component.
+
 3.4.3 (2008-10-13)
 ------------------
 
