Pinned dependency on mechanize <0.2dev.
The upcoming 0.2.0 folds in ClientForm, but also makes some backward-
incompatible API changes.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,9 @@ CHANGES
 3.8.1 (unreleased)
 ------------------
 
+- Pinned dependency on mechanize to prevent use of the upcoming
+  0.2.0 release before we have time to adjust to its API changes.
+
 - LP #98396:  testbrowser resolves relative URLs incorrectly.
 
 
