--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 CHANGES
 =======
 
+3.8.2 (unreleased)
+------------------
+
+- TBD
+
+
 3.8.1 (2010-04-19)
 ------------------
 
@@ -26,6 +32,7 @@ CHANGES
 
 - Fixed LP #419119: return None when the browser has no contents instead of
   raising an exception.
+
 
 3.7.0a1 (2009-08-29)
 --------------------
