Remove use of ``urllib2`` APIs in favor of ``mechanize`` equivalents.
``urllib2`` is now incompatible with ``mechanize 0.2.0``.

Thanks to John J. Lee for the patch.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,7 +6,9 @@ CHANGES
 ------------------
 
 - LP #568806: Update dependency ``mechanize >= 0.2.0``, which now includes
-  the ``ClientForm`` APIs.
+  the ``ClientForm`` APIs.  Remove use of ``urllib2`` APIs (incompatible
+  with ``mechanize 0.2.0``) in favor of ``mechanize`` equivalents.
+  Thanks to John J. Lee for the patch.
 
 - Use stdlib ``doctest`` module, instead of ``zope.testing.doctest``.
 
