--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,8 @@ CHANGES
 4.0.3 (unreleased)
 ------------------
 
-- pinning version 'WebTest <= 1.3.4', because of some incompatibility and
-  test failures
+- Internal implementation now uses webtest instead of mechanize. Mechanize
+  dependency is completely dropped.
 
 - When ``Browser.handleErrors`` is False, also add ``x-wsgiorg.throw_errors``
   to the environment. http://wsgi.org/wsgi/Specifications/throw_errors
@@ -21,6 +21,11 @@ CHANGES
     choices
 
   - when you fail to find anything, show all the available items
+
+- Removed support for Python-2.5
+
+- Added support for Python-3.3
+
 
 
 4.0.2 (2011-05-25)
