--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,9 @@ CHANGES
   environment by setting it to ``None`` when ``Browser.handleErrors`` is
   ``True``.  This makes it easier to test error pages.
 
+- Made Browser.submit() handle ``raiseHttpErrors``
+  (https://github.com/zopefoundation/zope.testbrowser/pull/4).
+
 - More friendly error messages from getControl() et al:
 
   - when you specify an index that is out of bounds, show the available
